# dsamores.github.io

./: 404.html  README.md  hugo.toml  index.html  index.xml  pelicanconf.py  publishconf.py  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: deploy.yml
_posts/: 2023-12-06-welcome-to-jekyll.markdown
about-me/: index.html
categories/: index.html  index.xml
categories/meta/: index.html  index.xml
categories/meta/page/1/: index.html
categories/page/1/: index.html
config/_default/: config.toml  menu.toml  params.toml
content/: code-coverage-python.md
content/page/about/: index.md
content/posts/: starting-a-blog.md
content/posts/starting-a-blog/: index.md
docs/: archives.html  authors.html  categories.html  code-coverage-in-python.html  index.html
docs/author/: david-amores.html
output/: code-coverage-in-python.html  index.html  tags.html
output/author/: david-amores.html
output/category/: testing.html
page/: index.html  index.xml
page/1/: index.html
page/page/1/: index.html
posts/: index.html  index.xml
posts/page/1/: index.html
posts/starting-a-blog/: index.html
public/: 404.html  index.html  index.xml  sitemap.xml
public/categories/: index.html  index.xml
public/posts/: index.html  index.xml
public/posts/starting-a-blog/: index.html
public/tags/: index.html  index.xml
tags/: index.html  index.xml
tags/blogging/: index.html  index.xml
tags/engineering-life/: index.html  index.xml
tags/page/1/: index.html
tags/personal/: index.html  index.xml
tags/reflections/: index.html  index.xml
(+4 files in other folders)
